Fixing the main text too low

--- a/VIETNAMESE/CSS/styleVN.css
+++ b/VIETNAMESE/CSS/styleVN.css
@@ -286,7 +286,7 @@ body::-webkit-scrollbar-thumb:hover {
     text-transform: capitalize;
     font-size: 35px;
     font-weight: 300;
-    height: 100px;
+    height: 210px;
 }
 
 .content {
